# All_utils_project

./: Dockerfile  docker-compose.yml  garb.py  main.py  pyproject.toml
data/: CAT_without_username.txt  Who_get_the_CAT.txt  __init__.py  cat_users_07112023.txt  dff.txt  emojies.py  garb.txt  ids_catusers_without_username.txt  new_garb.txt
data/some_vip_data/: __init__.py  tags.html  tags_format.py
services/: __init__.py
services/blogers_links/: FROM.txt  __init__.py  all_links.txt  garb.py  link.txt  list.txt  list_to_links.py  list_to_links22.py  list_to_set.py
services/exercises_bot/: __init__.py  exercises_list.py  path_to_file.py  randomiser.py
services/recieve_messages/: get_full_info_about_sender.py  getter.session
services/reminder/: __init__.py  reminder.py
services/sender/: Dockerfile  __init__.py  client_attach.py  docker-compose.yml  ifill_acc.session  ira_acc.session  pyproject.toml  requirements.txt  root@193.37.71.106  send.py  some_old_code.py
services/sender/data/: cats_groups_lst.txt  lst_TOSEND_PRIGLOS.txt
services/tags_to30_rows/: ALL_TAGS.txt  BADTAGS.txt  RESULT.txt  __init__.py  cleaner.py  list_to30_rows.py
services/test_sender/: __init__.py  my_account.session  some_text_to_send.py  text.txt  yep.py
services/tg_parser_group/: 3_lingva_groups.txt  Fil_group.json  an_n_file.py  bad_boys.txt  chgvjbkn.py  from_ira_getter.session  id_some_chats.txt  lingva_groups.json  my_little_parser.session  n_file.py  tg_group_parser.py  tmp_list.txt  tmp_noname_list.txt  чаты кошки.txt
