[tool.poetry]
name = "all-utils-project"
version = "0.1.0"
description = ""
authors = ["ilia_volodin <vollodin61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "^9.5.0"
Pyrogram = "^2.0.106"

aiohttp = "^3.8.5"
aiogram = "^3.0"
aioredis = "^2.0"

asyncpg = "^0"

django = "^4"

gspread = "^5.10"
oauth2client = "^4.1.3"
google-api-python-client = "^2.100.0"
google-auth-httplib2 = "^0"
google-auth-oauthlib = "^1"
gspread-asyncio = "^1.4"
gspread-formatting = "^1.1.2"

emoji = "^2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
